--- a/data_from_mysql/pubspec.yaml
+++ b/data_from_mysql/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   http:
   json_annotation: ^4.4.0
+  get: 4.6.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
