--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.datasource.url=jdbc:mysql://localhost:3306/dizia
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.jpa.hibernate.use-new-id-generator-mappings= false
